--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,7 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project
+    xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <parent>
     <artifactId>pDAQ</artifactId>
@@ -9,33 +12,32 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>daq-moni-tool</artifactId>
   <packaging>jar</packaging>
-  <name>Monitoring tools</name>
-  <description>The ${project.name} sub-system of the Surface Data Acquisition system for the IceCube Project.</description>
+  <name>daq-moni-tool</name>
 
   <scm>
-    <connection>scm:svn:http://code.icecube.wisc.edu/daq/projects/${project.name}/trunk</connection>
-    <developerConnection>scm:svn:http://code.icecube.wisc.edu/daq/projects/${project.name}/trunk</developerConnection>
-    <tag>HEAD</tag>
-    <url>http://code.icecube.wisc.edu/daq/projects/${project.name}</url>
+    <connection>scm:svn:http://code.icecube.wisc.edu/daq/meta-projects/daq-moni-tool/trunk</connection>
   </scm>
 
-  <!-- Dependencies for this project.  These should not contain
-  versions.  The versions needed should be specified in the top-level
-  pom's dependencyManagement -->
+  <build>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>true</filtering>
+      </resource>
+    </resources>
+  </build>
+
   <dependencies>
     <dependency>
-      <groupId>edu.wisc.icecube</groupId>
-      <artifactId>daq-common</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.jfree</groupId>
+      <groupId>jfree</groupId>
       <artifactId>jfreechart</artifactId>
+      <version>1.0.0</version>
     </dependency>
 
     <dependency>
-      <groupId>org.jfree</groupId>
+      <groupId>jfree</groupId>
       <artifactId>jcommon</artifactId>
+      <version>1.0.0</version>
     </dependency>
   </dependencies>
 
