Ostensibly for Issue #1326: Get mvn to build pdaq releases
- Additions to pom.xml files adding a description and scm elements
helpful in generating documentation via mvn site.

- Moving versions of dependencies to top-level pom.xml's
dependencyManagement element rather than leaving them in the
project-specific pom.xml This is to have all dependency version info
in one top-level location.

--- a/pom.xml
+++ b/pom.xml
@@ -13,9 +13,13 @@
   <artifactId>daq-moni-tool</artifactId>
   <packaging>jar</packaging>
   <name>daq-moni-tool</name>
+  <description>The ${project.name} sub-system of the Surface Data Acquisition system for the IceCube Project.</description>
 
   <scm>
-    <connection>scm:svn:http://code.icecube.wisc.edu/daq/meta-projects/daq-moni-tool/trunk</connection>
+    <connection>scm:svn:http://code.icecube.wisc.edu/daq/projects/${project.name}/trunk</connection>
+    <developerConnection>scm:svn:http://code.icecube.wisc.edu/daq/projects/${project.name}/trunk</developerConnection>
+    <tag>HEAD</tag>
+    <url>http://code.icecube.wisc.edu/daq/projects/${project.name}</url>
   </scm>
 
   <build>
@@ -27,17 +31,18 @@
     </resources>
   </build>
 
+  <!-- Dependencies for this project.  These should not contain
+  versions.  The versions needed should be specified in the top-level
+  pom's dependencyManagement -->
   <dependencies>
     <dependency>
       <groupId>jfree</groupId>
       <artifactId>jfreechart</artifactId>
-      <version>1.0.0</version>
     </dependency>
 
     <dependency>
       <groupId>jfree</groupId>
       <artifactId>jcommon</artifactId>
-      <version>1.0.0</version>
     </dependency>
   </dependencies>
 
