Issue 7095: Move std-java-tools pom.xml rules into here, upgrade all packages to the latest version, and eliminate unneeded packages

--- a/pom.xml
+++ b/pom.xml
@@ -33,12 +33,12 @@
   pom's dependencyManagement -->
   <dependencies>
     <dependency>
-      <groupId>jfree</groupId>
+      <groupId>org.jfree</groupId>
       <artifactId>jfreechart</artifactId>
     </dependency>
 
     <dependency>
-      <groupId>jfree</groupId>
+      <groupId>org.jfree</groupId>
       <artifactId>jcommon</artifactId>
     </dependency>
   </dependencies>
